So very many things. The chainsaw of code cleanup has entered most of the files on com.offsetnull.bt.service